--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.7.16",
+    "react-spinners": "^0.8.3",
     "react-transition-group": "^1.2.1"
   },
   "scripts": {
@@ -27,6 +28,15 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-react",
+      "@babel/preset-env"
+    ],
+    "plugins": [
+      "emotion"
+    ]
   },
   "resolutions": {
     "browserslist": "4.6.2",
