--- a/package.json
+++ b/package.json
@@ -42,7 +42,180 @@
   },
   "resolutions": {
     "browserslist": "4.6.2",
-    "caniuse-lite": "1.0.30000974"
+    "caniuse-lite": "1.0.30000974",
+    "react-transition-group": "4.4.1",
+    "@babel/runtime": "7.10.1",
+    "hoist-non-react-statics": "3.3.2",
+    "regenerator-runtime": "0.13.5",
+    "js-tokens": "4.0.0",
+    "dom-helpers": "5.1.4",
+    "performance-now": "0.2.0",
+    "core-js": "1.2.7",
+    "promise": "7.3.1",
+    "chalk": "2.4.2",
+    "pretty-format": "24.9.0",
+    "ansi-styles": "3.2.1",
+    "escape-string-regexp": "1.0.5",
+    "supports-color": "5.5.0",
+    "color-convert": "1.9.3",
+    "color-name": "1.1.3",
+    "has-flag": "3.0.0",
+    "inherits": "2.0.4",
+    "source-map": "0.6.1",
+    "@jest/types": "24.9.0",
+    "ansi-regex": "4.1.0",
+    "@types/yargs": "13.0.9",
+    "@types/testing-library__dom": "6.14.0",
+    "aria-query": "4.0.2",
+    "follow-redirects": "1.5.10",
+    "debug": "3.1.0",
+    "ms": "2.0.0",
+    "warning": "4.0.3",
+    "path-to-regexp": "1.8.0",
+    "isarray": "0.0.1",
+    "@babel/core": "7.9.0",
+    "camelcase": "5.3.1",
+    "fs-extra": "8.1.0",
+    "resolve": "1.15.0",
+    "semver": "6.3.0",
+    "terser-webpack-plugin": "2.3.5",
+    "ts-pnp": "1.1.6",
+    "fsevents": "2.1.2",
+    "@babel/code-frame": "7.10.1",
+    "convert-source-map": "1.7.0",
+    "json5": "2.1.3",
+    "jsesc": "2.5.2",
+    "globals": "12.4.0",
+    "safe-buffer": "5.1.2",
+    "@babel/preset-env": "7.10.1",
+    "@babel/preset-react": "7.10.1",
+    "loader-utils": "1.4.0",
+    "@babel/plugin-proposal-class-properties": "7.8.3",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.8.3",
+    "@babel/plugin-proposal-numeric-separator": "7.8.3",
+    "@babel/plugin-proposal-optional-chaining": "7.9.0",
+    "pkg-up": "3.1.0",
+    "find-up": "4.1.0",
+    "locate-path": "5.0.0",
+    "p-locate": "4.1.0",
+    "path-exists": "4.0.0",
+    "p-limit": "2.3.0",
+    "p-try": "2.2.0",
+    "@babel/plugin-transform-react-display-name": "7.8.3",
+    "cosmiconfig": "5.2.1",
+    "import-fresh": "3.2.1",
+    "parse-json": "4.0.0",
+    "resolve-from": "4.0.0",
+    "callsites": "3.1.0",
+    "is-arrayish": "0.2.1",
+    "clone-deep": "4.0.1",
+    "kind-of": "6.0.3",
+    "lazy-cache": "1.0.4",
+    "shallow-clone": "3.0.1",
+    "for-in": "1.0.2",
+    "isobject": "3.0.1",
+    "is-extendable": "1.0.1",
+    "css-select": "2.1.0",
+    "css-tree": "1.0.0-alpha.37",
+    "util.promisify": "1.0.0",
+    "css-what": "3.2.1",
+    "domutils": "1.7.0",
+    "domelementtype": "1.3.1",
+    "entities": "1.1.2",
+    "mdn-data": "2.0.4",
+    "emojis-list": "3.0.0",
+    "regexpp": "3.1.0",
+    "eslint-scope": "5.0.0",
+    "eslint-utils": "1.4.3",
+    "is-glob": "4.0.1",
+    "estraverse": "4.3.0",
+    "slash": "2.0.0",
+    "anymatch": "2.0.0",
+    "jest-worker": "25.5.0",
+    "normalize-path": "3.0.0",
+    "cross-spawn": "6.0.5",
+    "path-key": "2.0.1",
+    "shebang-command": "1.2.0",
+    "which": "1.3.1",
+    "shebang-regex": "1.0.0",
+    "pump": "3.0.0",
+    "braces": "2.3.2",
+    "define-property": "2.0.2",
+    "extend-shallow": "3.0.2",
+    "fill-range": "4.0.0",
+    "is-number": "3.0.0",
+    "to-regex-range": "2.1.1",
+    "is-descriptor": "1.0.2",
+    "is-accessor-descriptor": "1.0.0",
+    "is-data-descriptor": "1.0.0",
+    "has-value": "1.0.0",
+    "has-values": "1.0.0",
+    "read-pkg-up": "2.0.0",
+    "require-main-filename": "1.0.1",
+    "read-pkg": "2.0.0",
+    "load-json-file": "2.0.0",
+    "path-type": "4.0.0",
+    "pify": "4.0.1",
+    "find-cache-dir": "2.1.0",
+    "schema-utils": "2.7.0",
+    "make-dir": "2.1.0",
+    "pkg-dir": "3.0.0",
+    "punycode": "1.4.1",
+    "cssesc": "3.0.0",
+    "postcss": "7.0.31",
+    "postcss-value-parser": "4.1.0",
+    "postcss-selector-parser": "6.0.2",
+    "doctrine": "3.0.0",
+    "glob-parent": "5.1.1",
+    "ignore": "4.0.6",
+    "inquirer": "7.1.0",
+    "strip-ansi": "5.2.0",
+    "acorn": "6.4.1",
+    "rimraf": "2.7.1",
+    "type-fest": "0.8.1",
+    "ansi-escapes": "4.3.1",
+    "string-width": "4.2.0",
+    "emoji-regex": "7.0.3",
+    "is-fullwidth-code-point": "3.0.0",
+    "commander": "2.20.3",
+    "readable-stream": "2.3.7",
+    "string_decoder": "1.3.0",
+    "yargs": "12.0.5",
+    "string-length": "3.1.0",
+    "is-wsl": "2.2.0",
+    "jsdom": "14.1.0",
+    "parse5": "5.1.0",
+    "whatwg-url": "7.1.0",
+    "ws": "6.2.1",
+    "qs": "6.7.0",
+    "extsprintf": "1.3.0",
+    "cliui": "4.1.0",
+    "get-caller-file": "1.0.3",
+    "yargs-parser": "11.1.1",
+    "wrap-ansi": "2.1.0",
+    "normalize-url": "1.9.1",
+    "is-obj": "1.0.1",
+    "is-absolute-url": "3.0.3",
+    "globby": "8.0.2",
+    "chokidar": "2.1.8",
+    "is-binary-path": "1.0.1",
+    "readdirp": "2.2.1",
+    "binary-extensions": "1.13.1",
+    "assert": "1.4.1",
+    "util": "0.11.1",
+    "type": "1.2.0",
+    "cacache": "13.0.1",
+    "p-map": "3.0.0",
+    "ssri": "7.1.0",
+    "yallist": "3.1.1",
+    "mime": "2.4.6",
+    "memory-fs": "0.4.1",
+    "bn.js": "5.1.2",
+    "array-flatten": "2.1.2",
+    "bytes": "3.0.0",
+    "setprototypeof": "1.1.1",
+    "http-errors": "1.6.3",
+    "faye-websocket": "0.10.0"
   },
   "browserslist": {
     "production": [
