--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
     "date-fns": "^2.14.0",
+    "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
     "react-countup": "^4.3.3",
