--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "3.4.1",
     "react-scroll": "^1.7.16",
     "react-spinners": "^0.8.3",
+    "react-switch": "^5.0.1",
     "react-transition-group": "^1.2.1"
   },
   "scripts": {
