--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.10.0",
     "@nivo/bar": "^0.61.1",
+    "@nivo/geo": "^0.62.0",
     "@nivo/line": "^0.61.1",
     "@nivo/pie": "^0.62.0",
     "@nivo/treemap": "^0.62.0",
