--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "classnames": "^2.2.6",
     "date-fns": "^2.14.0",
     "date-fns-tz": "^1.0.10",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "react-scroll": "^1.7.16",
     "react-spinners": "^0.8.3",
     "react-switch": "^5.0.1",
